samples/_failures_safe/1761402414_6cfe00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab072578.c: In function ‘main’:
./samples/SAFE/__tmp_ab072578.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_ab072578.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab072578.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab072578.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab072578.c:155:17: error: expected declaration or statement at end of input
